--- a/templates/index.html
+++ b/templates/index.html
@@ -21,19 +21,20 @@
     <!-- Header -->
     <header id="header">
         <h1>DEMO on ML model using flask</h1>
+        <h5><strong>NOTE :-</strong>Default values are set to '0'</h5>
 
-        <form method="post" , action="{{url_for('predict')}}">
+        <form method="post" , action="{{url_for('predict_pay')}}">
 
             <label for="experience">Years of experience (0 to 20) :</label>
-            <input type="number" id="experience" name="experience" min="0" max="20">
+            <input type="number" id="experience" name="experience" min="0" max="20" value="0">
             <br>
             <label for="test_score">Score in Test (0 to 10) :</label>
-            <input type="number" id="test_score" name="test_score" min="0" max="10">
+            <input type="number" id="test_score" name="test_score" min="0" max="10" value="0">
             <br>
             <label for="interview_score">Score in interview (0 to 10) :</label>
-            <input type="number" id="interview_score" name="interview_score" min="0" max="10">
+            <input type="number" id="interview_score" name="interview_score" min="0" max="10" value="0">
 
-            <br> <input type="submit" value="predict">
+            <br> <input type="submit" value="Submit to predict form data">
         </form>
     </header>
 
